[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "MeshMorpher"
version = "0.0.1"
authors = [
  { name="Pierre Tharreau", email="pierre.tharreau18@imperial.ac.uk" },
]
description = "Mesh Morphing Tools based on RBF Interpolation"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]